# ESP32_Logger

./: .gitignore
CAN_TEST/: CMakeCache.txt  CMakeLists.txt  sdkconfig
blink/: CMakeCache.txt  cmake_install.cmake  config.env  ldgen_libraries  project_description.json  sdkconfig  sdkconfig.old
blink/bootloader-prefix/tmp/: bootloader-mkdirs.cmake
blink/esp-idf/: cmake_install.cmake
blink/esp-idf/app_trace/: cmake_install.cmake
blink/esp-idf/app_update/: cmake_install.cmake
blink/gdbinit/: gdbinit  symbols
component_test/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  config.env  ldgen_libraries  ldgen_libraries.in  project_description.json  run_menuconfig.bat  run_menuconfig.ps1  sdkconfig  sdkconfig.old
component_test/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
component_test/esp-idf/: cmake_install.cmake
component_test/gdbinit/: gdbinit  symbols
component_test/main/: blink_example_main.c  idf_component.yml
logger/: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  config.env  flash_app_args  flash_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  sdkconfig
logger/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
logger/esp-idf/: cmake_install.cmake
logger/gdbinit/: gdbinit  symbols
logger/main/: CMakeLists.txt  adc.c  adc.h  can.c  can.h  dtc.c  dtc.h  gnss.c  gnss.h  idf_component.yml  ina260.c  ina260.h  log_chnl.h  logger.c  logger.h  main.c  sdcard.c  sdcard.h  uart.c  uart.h
(+393 files in other folders)
