idf_component_register(SRCS     "gnss.c" 
                                "adc.c" 
                                "ina260.c" 
                                "logger.c" 
                                "main.c"
                                "dtc.c"
                                "can.c"
                                "sdcard.c"
                                "uart.c"
                    INCLUDE_DIRS ".")